2011-04-10  Ivan Maidanski  <ivmai@mail.ru>

	* gcj_mlc.c (GC_gcj_malloc_initialized): Use STATIC unless
	GC_ASSERTIONS.
	* include/private/gc_priv.h (GC_gcj_malloc_initialized): Don't
	declare (as external) unless GC_ASSERTIONS.
	* os_dep.c (GC_win32_free_heap): Clear GC_heap_bases[] also for
	Cygwin; add FIXME.
	* include/private/gcconfig.h: Include <sys/unistd.h> for RTEMS.
	* include/private/gcconfig.h: Add "#error" for every "-->" mark.
	* include/private/gcconfig.h (CLEAR_DOUBLE): Turn the code into
	an expression.
	* include/private/pthread_support.h (SUSPENDED_EXT): Add new flag
	(which existed previously as SUSPENDED and still exists in GCJ).
	* include/private/pthread_support.h (DISABLED_GC): Change the
	value (as it is already used by SUSPENDED_EXT).

2011-04-10  Ivan Maidanski  <ivmai@mail.ru> (mostly really Iain Sandoe)

	* tests/test.c (reverse_test):  Modify count (BIG) for
	ppc64-darwin.

2011-04-09  Ivan Maidanski  <ivmai@mail.ru>

	* reclaim.c (GC_print_all_errors): Recognize new GC_ABORT_ON_LEAK
	macro and environment variable; abort if any error has been
	printed provided the environment variable (or macro) is set.
	* doc/README.environment (GC_ABORT_ON_LEAK): Document.
	* doc/README.macros (GC_ABORT_ON_LEAK): Ditto.
	* doc/README.macros (FIND_LEAK, SUNOS5SIGS, PCR,
	USE_COMPILER_TLS): Reformat the text.

2011-04-09  Ivan Maidanski  <ivmai@mail.ru> (really Jie Liu)

	* os_dep.c (GC_unix_sbrk_get_mem, GC_unix_get_mem): Don't define
	for RTEMS.
	* include/private/gcconfig.h (RTEMS): Add support for.
	* include/private/gcconfig.h (GET_MEM): Use calloc() for RTEMS.

2011-04-09  Ivan Maidanski  <ivmai@mail.ru>

	* mallocx.c (GC_malloc_uncollectable): Move to malloc.c (since
	it is used internally in some places).

2011-04-09  Ivan Maidanski  <ivmai@mail.ru>

	* dbg_mlc.c (GC_register_finalizer_no_order): Remove redundant
	declaration.
	* dbg_mlc.c (GC_debug_malloc_replacement,
	GC_debug_realloc_replacement): Rename RA to GC_DBG_RA.